--- a/css/inicio_style.css
+++ b/css/inicio_style.css
@@ -1,16 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+
 :root{
-    --color: #e36414;
+    --color1: #e36414;
+    --color2: #0f4c5c;
 }
 
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Lilita One', sans-serif;
 }
 
 
 header{
-    background-color: var(--color);
+    background-color: var(--color1);
     height: 70px;
 }
 
@@ -39,7 +43,7 @@ header .container{
 }
 
 #items li{
-    padding: 52px 10px 0px 10px;
+    padding: 50px 10px 2px 10px;
     text-align: center;
     list-style: none;
     float: left;
@@ -56,11 +60,27 @@ header .container{
 }
 
 
-.sect {
+.sect .barra{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--color2);
+    padding: 0px 0px 0px 0px;
 }
+
+.sect h2{
+    color: white;
+}
+
+.sect .barrita{
+    background-color: var(--color1);
+    border-radius: 12px;
+    padding: 10px 40px 10px 40px;
+    width: 300px;
+    text-align: center;
+    height: 100%;
+}
+
 
 
 
