--- a/css/inicio_style.css
+++ b/css/inicio_style.css
@@ -1,64 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 
-:root{
-    --color1: #e36414;
-    --color2: #0f4c5c;
-}
-
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
     font-family: 'Lilita One', sans-serif;
 }
 
+body{
+    padding-top: 70px;
+}
 
-header{
+:root{
+    --color1: #e36414;
+    --color2: #0f4c5c;
+    --color3: #ffffff;
+}
+
+.container{
+    width: 100%;
     background-color: var(--color1);
-    height: 70px;
-}
-
-header .container{
-    margin: 0 auto;
-    flex-direction: column;
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
+    position: fixed;
+    top: 0;
 }
 
-.container #logo{
+#logo{
+    height: 70px;
+    width: 15%;
+}
+
+#menu{
+    width: 80%;
+}
+
+#items{
     display: flex;
-    float: left;
     
-}
+    width: inherit;
+    list-style: none;
 
-.container #menu{
-    
-    display: flex;
-    justify-content: space-between;
-}
-
-
-.container #logo img{
-    padding: 10px;
-    width: 25%;
 }
 
 #items li{
-    padding: 50px 10px 2px 10px;
-    text-align: center;
-    list-style: none;
-    float: left;
+    padding: 52px 20px 0px 20px;
 }
+
+li>a{
+    color: var(--color3);
+    text-decoration: none;
+    
+}
+
 
 #items li:hover{
-    background: #cc4f02;
+    background: #ff7c2a;
+    
 }
 
-
-#items li a{
-    text-decoration: none;
-    color: white;
+.sect{
+    margin: 0 auto;
+    
 }
-
 
 .sect .barra{
     display: flex;
@@ -81,6 +85,27 @@ header .container{
     height: 100%;
 }
 
+.cont{
+    width: 1300px 50px;
+    margin: 70px 10px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 80px;
+    justify-content: space-between;
+}
 
 
+.cont .caja {
+    width: 30.3%;
+    height: 200px;
+    border: 2px #000 solid;
+    margin: 5px 0.5% ;
+    border-radius: 12px;
+}
 
+footer{
+    background-color: var(--color2);
+    color: var(--color3);
+    text-align: center;
+    font-size: 12px;
+}
