--- a/css/inicio_style.css
+++ b/css/inicio_style.css
@@ -47,6 +47,17 @@ body{
     padding: 52px 20px 0px 20px;
 }
 
+#items div{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+div a{
+    color: var(--color3);
+    text-decoration: none;
+}
+
 li>a{
     color: var(--color3);
     text-decoration: none;
@@ -103,9 +114,21 @@ li>a{
     border-radius: 12px;
 }
 
+#Busqueda{
+    width: 30.3%;
+    height: 35px;
+    border: 2px #fff solid;
+    margin: 15px 0px 5px 0px;
+    border-radius: 20px;
+}
+
 footer{
     background-color: var(--color2);
     color: var(--color3);
     text-align: center;
     font-size: 12px;
+}
+
+@media screen and (min-width:840px){
+    
 }
