--- a/css/formulario.css
+++ b/css/formulario.css
@@ -38,31 +38,36 @@ body{
 .logIn{
     padding: 0 25px;
 }
-.logIn span.inicio{
+.logIn li {
+    display: flex;
+    align-items: center;
+}
+
+.logIn span.inicio {
     border-radius: 3px 0px 0px 3px;
     width: 10%;
     text-align: center;
     color: var(--color2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--color7);
 }
-.text{
+
+.text {
     background: var(--color7);
     width: 90%;
-    border-radius: 4px;
+    border-radius: 0px 3px 3px 0px;
     border: none;
     outline: none;
     color: var(--color8);
     font-family: 'Source Sans Pro', sans-serif;
-    color: var(--color9);
     padding-left: 10px;
-}
-.text, .logIn span.inicio{
-    display: inline-block;
     height: 40px;
     line-height: 40px;
-    background: var(--color7);
-    vertical-align: top;
 }
-.boton{
+
+.boton {
     height: 35px;
     background: var(--color2);
     width: 100%;
@@ -73,23 +78,26 @@ body{
     font-size: 1em;
     border: none;
 }
-.span{
+
+.span {
     display: table;
     width: 100%;
     font-size: 14px;
 }
-ul li{
-    height: 40px;
+
+ul li {
     margin: 15px 0;
     list-style: none;
 }
-.cuenta_nueva{
+
+.cuenta_nueva {
     width: 88%;
     padding: 0 6%;
     height: 40px;
     background: var(--color6);
     border-radius: 0px 0px 10px 10px;
 }
+
 .cuenta_nueva div{
     display: block;
     width: 100%;
