--- a/css/Intento.css
+++ b/css/Intento.css
@@ -1,22 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
     font-family: 'Lilita One', sans-serif;
 }
 
-body{
+body {
     padding-top: 70px;
 }
 
-:root{
+:root {
     --color1: #e36414;
     --color2: #0f4c5c;
     --color3: #ffffff;
 }
 
-.container{
+.container {
     width: 100%;
     background-color: var(--color1);
     display: flex;
@@ -26,26 +26,23 @@ body{
     top: 0;
 }
 
-#logo{
+#logo {
     height: 70px;
     width: 15%;
 }
 
 #menu {
     display: flex;
-    justify-content: flex-end; 
-    width: 80%; 
+    justify-content: flex-end; /* Asegúrate de que el menú se alinee a la derecha */
+    width: 80%; /* Ajusta el ancho según sea necesario */
 }
 
 #items {
     display: flex;
     list-style: none;
-    margin-left: auto;
-    width: inherit;
 }
 
-
-#items li{
+#items li {
     text-align: center;
     width: auto;
     display: flex;
@@ -54,27 +51,25 @@ body{
     justify-content: center;
 }
 
-
-
-#icons{
+#icons {
     color: #fff;
     align-self: center;
 }
 
 #Busqueda {
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: center;
     width: 30.3%;
     height: 35px;
     border: 2px #fff solid;
     margin: 30px 0px 5px 0px;
     border-radius: 20px;
-    background-color: var(--color1); 
+    background-color: var(--color1);
 }
 
 #Busqueda i {
-    margin-right: 8px; 
+    margin-right: 8px;
 }
 
 #Busqueda a {
@@ -82,31 +77,26 @@ body{
     text-decoration: none;
 }
 
-
-#items div a{
+#items div a {
     width: 0px 10px 0px 10px;
     color: var(--color3);
     text-decoration: none;
 }
 
-li>a{
+li > a {
     color: var(--color3);
     text-decoration: none;
-    
 }
 
-
-#items li:hover{
+#items li:hover {
     background: #ff7c2a;
-    
 }
 
-.sect{
+.sect {
     margin: 0 auto;
-    
 }
 
-.sect .barra{
+.sect .barra {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -114,11 +104,11 @@ li>a{
     padding: 0px 0px 0px 0px;
 }
 
-.sect h2{
+.sect h2 {
     color: white;
 }
 
-.sect .barrita{
+.sect .barrita {
     background-color: var(--color1);
     border-radius: 12px;
     padding: 10px 40px 10px 40px;
@@ -127,8 +117,7 @@ li>a{
     height: 100%;
 }
 
-.cont{
-    width: 1300px 50px;
+.cont {
     margin: 70px 10px;
     display: flex;
     flex-wrap: wrap;
@@ -136,22 +125,90 @@ li>a{
     justify-content: space-between;
 }
 
-
 .cont .caja {
     width: 30.3%;
     height: 200px;
     border: 2px #000 solid;
-    margin: 5px 0.5% ;
+    margin: 5px 0.5%;
     border-radius: 12px;
 }
 
-footer{
+footer {
     background-color: var(--color2);
     color: var(--color3);
     text-align: center;
     font-size: 12px;
 }
 
-@media screen and (min-width:840px){
-    
+.menu-toggle {
+    display: none;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+    #logo {
+        width: 25%;
+    }
+
+    #menu {
+        width: 75%;
+    }
+
+    #items li {
+        padding: 20px 10px;
+    }
+
+    .cont {
+        width: 100%;
+        justify-content: space-around;
+    }
+
+    .cont .caja {
+        width: 45%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    #menu {
+        display: none; /* Ocultar menú por defecto */
+        flex-direction: column;
+        width: 100%;
+        background-color: var(--color1);
+        position: absolute;
+        top: 70px;
+        left: 0;
+        z-index: 1000;
+    }
+
+    .menu-toggle {
+        display: block;
+        background-color: var(--color1);
+        border: none;
+        font-size: 24px;
+        color: white;
+        cursor: pointer;
+        position: absolute;
+        right: 10px;
+        top: 20px;
+    }
+
+    #menu.active {
+        display: flex; /* Mostrar menú cuando esté activo */
+    }
+
+    #items {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #items li {
+        padding: 20px 0;
+    }
+
+    #Busqueda {
+        margin-top: 20px;
+    }
+
+    #logo {
+        width: 50%;
+    }
 }
