--- a/css/inicio_style.css
+++ b/css/inicio_style.css
@@ -14,6 +14,12 @@ body{
     --color1: #e36414;
     --color2: #0f4c5c;
     --color3: #ffffff;
+    --color4: #5f0f40;
+    --color5: #9a031e;
+    --color6: #c3530e;
+    --color7: #ae551d;
+    --color8: #a3a2a2;
+    --color9: #000;
 }
 
 .container{
