--- a/css/formulario.css
+++ b/css/formulario.css
@@ -42,7 +42,6 @@ body{
     display: flex;
     align-items: center;
 }
-
 .logIn span.inicio {
     border-radius: 3px 0px 0px 3px;
     width: 10%;
@@ -52,8 +51,9 @@ body{
     justify-content: center;
     align-items: center;
     background: var(--color7);
+    height: 40px;
+    line-height: 40px;
 }
-
 .text {
     background: var(--color7);
     width: 90%;
@@ -77,6 +77,7 @@ body{
     color: var(--color3);
     font-size: 1em;
     border: none;
+    margin-bottom: 10px;
 }
 
 .span {
@@ -89,7 +90,6 @@ ul li {
     margin: 15px 0;
     list-style: none;
 }
-
 .cuenta_nueva {
     width: 88%;
     padding: 0 6%;
