--- a/css/inicio_style.css
+++ b/css/inicio_style.css
@@ -74,6 +74,7 @@ body {
     margin: 20px 0px 5px 0px; 
     border-radius: 20px;
     background-color: var(--color1); 
+    margin-top: 40px;
 }
 
 #Busqueda i {
