--- a/css/categorias.css
+++ b/css/categorias.css
@@ -10,8 +10,8 @@
     --color8: #a3a2a2;
     --color9: #000;
 }
-.sect{
-    position: fixed;
+.barra{
+    position:fixed;
     width: 100%;
     top: 90px;
 }
