--- a/css/viajes.css
+++ b/css/viajes.css
@@ -13,3 +13,13 @@ section{
     width: 90%;
     overflow: hidden;
 }
+section article{
+    float: left;
+    font-size: 1rem;
+    height: 340px;
+    width: 32.33%;
+    margin: 0.5%;
+    padding: 10px;
+    box-sizing: border-box;
+    
+}
