--- a/css/viajes.css
+++ b/css/viajes.css
@@ -20,6 +20,12 @@ section article{
     width: 32.33%;
     margin: 0.5%;
     padding: 10px;
-    box-sizing: border-box;
-    
+    box-sizing: border-box;   
+}
+
+.galeria img{
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
