--- a/css/viajes.css
+++ b/css/viajes.css
@@ -29,3 +29,9 @@ section article{
     border-radius: 10px;
     margin-bottom: 10px;
 }
+
+.info-cupon img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
