--- a/css/viajes.css
+++ b/css/viajes.css
@@ -8,7 +8,7 @@ body {
     padding-top: 70px;
 }
 
-section{
+section {
     margin: 0 auto;
     width: 90%;
     overflow: hidden;
@@ -23,15 +23,17 @@ section article{
     box-sizing: border-box;   
 }
 
-.galeria img{
+.galeria .opciones img{
     width: 100%;
     height: auto;
     border-radius: 10px;
     margin-bottom: 10px;
 }
 
-.info-cupon img{
+.galeria .info-cupon img{
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
 }
