--- a/css/viajes.css
+++ b/css/viajes.css
@@ -15,6 +15,15 @@ body {
     width: 100%;
 }
 
+.cont .opciones {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 48%;
+    margin-bottom: 20px;
+}
+
 section {
     margin: 0 auto;
     width: 90%;
