--- a/css/mra.css
+++ b/css/mra.css
@@ -23,11 +23,7 @@
     text-align: center;
 }
 
-#dnl ul{
-    list-style: none;
-}
-
-#dnl li{
+#dnl p{
     margin: 16px 0px;
     font-size: 1.5rem;
 }
@@ -35,7 +31,14 @@
 #dnl a{
     margin: 16px 0px;
     font-size: 1.5rem;
+    text-decoration: none;
+    color: #e36414;
 }
+
+#dnl a:hover{
+    color: #c3530e;
+}
+
 footer{
     text-align: center;
     margin-top: 70px;
