--- a/css/inicio_images.css
+++ b/css/inicio_images.css
@@ -1,3 +1,9 @@
+*{
+    font-family: 'Didact Gothic', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
 #contenido {
     width: 500px;
     margin: 0 auto;
