--- a/css/inicio_images.css
+++ b/css/inicio_images.css
@@ -57,3 +57,10 @@
     color: #34495E;
     margin: 5px 0;
 }
+
+#galeria .info-cupon img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
