--- a/css/categorias.css
+++ b/css/categorias.css
@@ -21,3 +21,67 @@
 #bold{
     font-weight: bold;
 }
+.cont{
+    clear: left;
+    width: 80%;
+    height: auto;
+    margin: 0px auto;
+}
+.galeria{
+    display: inline-block;
+    margin: 0 auto;
+    overflow: hidden;
+    width: 100%;
+}
+.opciones{
+    height: 335px;
+    margin: 5px 15px;
+    border: solid var(--color8);
+    border-radius: 10px;
+    float: left;
+    text-align: justify;
+    width: 28%;
+    padding: 1%
+}
+.opciones img{
+    max-width: 70%;
+    height: 160px;
+    margin: 3px auto;
+    display: block;
+}
+.info-cupon{
+    display: flex;
+    width: 100%;
+    height: 90px;
+    justify-items: center;
+}
+.info-cupon img{
+    max-width: 40%;
+    justify-content: left;
+    float: left;
+    height: 80px;
+    padding-right: 10px;
+}
+.info-cupon p{
+    font-size: 1em;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    text-align: left;
+}
+h3, h4, h5{
+    text-align: center;
+}
+h3{
+    color: var(--color2);
+    padding-bottom: 5px;
+    font-size: 1.6em;
+}
+h4{
+    padding-bottom: 5px;
+    color: var(--color8);
+    font-size: 1.2em;
+}
+h5{
+    padding-top: 5px;
+}
