--- a/css/inicio_style.css
+++ b/css/inicio_style.css
@@ -97,6 +97,7 @@ body {
 li > a {
     color: var(--color3);
     text-decoration: none;
+    font-family: 'Lilita One', sans-serif;
 }
 
 #items li:hover {
@@ -118,6 +119,7 @@ li > a {
 
 .sect h2 {
     color: white;
+    font-family: 'Lilita One', sans-serif;
 }
 
 .sect .barrita {
@@ -136,6 +138,7 @@ li > a {
 .cont{
     padding-top: 20px;
 }
+
 /*.cont {
     width: 1300px 50px;
     margin: 70px 10px;
@@ -158,6 +161,15 @@ footer {
     color: var(--color3);
     text-align: center;
     font-size: 12px;
+}
+
+h2 > a{
+    font-family: 'Lilita One', sans-serif;
+}
+
+footer>h3{
+    font-family: 'Lilita One', sans-serif;
+    padding-top: 40px;
 }
 
 .menu-ham {
