--- a/css/categorias.css
+++ b/css/categorias.css
@@ -36,8 +36,8 @@
 .opciones{
     height: 335px;
     margin: 5px 15px;
-    border: solid var(--color8);
-    border-radius: 10px;
+    border: solid var(--color8) 2px;
+    border-radius: 0px;
     float: left;
     text-align: justify;
     width: 28%;
@@ -63,7 +63,7 @@
     padding-right: 10px;
 }
 .info-cupon p{
-    font-size: 1em;
+    font-size: 0.9em;
     display: flex;
     align-items: center;
     justify-items: center;
