--- a/css/About_us.css
+++ b/css/About_us.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+
 .titulo {
     text-align: center;
     margin-top: 70px;
