--- a/css/categorias.css
+++ b/css/categorias.css
@@ -34,7 +34,7 @@
     width: 100%;
 }
 .opciones{
-    height: 345px;
+    height: 355px;
     margin: 5px 15px;
     border: solid var(--color8) 2px;
     border-radius: 0px;
@@ -50,6 +50,7 @@
     display: block;
 }
 .info-cupon{
+    padding-top: 10px;
     display: flex;
     width: 100%;
     height: 90px;
