--- a/css/inicio_style.css
+++ b/css/inicio_style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 
 * {
     padding: 0;
@@ -59,6 +60,7 @@ body {
     flex-direction: column;
     padding: 20px 10px; 
     justify-content: center;
+    font-family: 'Lilita One', sans-serif;
 }
 
 #icons {
@@ -77,6 +79,7 @@ body {
     border-radius: 20px;
     background-color: var(--color1); 
     margin-top: 40px;
+    
 }
 
 #Busqueda i {
@@ -86,6 +89,7 @@ body {
 #Busqueda a {
     color: var(--color3);
     text-decoration: none;
+    font-family: 'Lilita One', sans-serif;
 }
 
 #items div a {
