--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
 :root{
     --color1: #e36414;
     --color2: #0f4c5c;
