--- a/css/categorias.css
+++ b/css/categorias.css
@@ -1,53 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
-:root {
-    --color1: #e36414;
-    --color2: #0f4c5c;
-    --color3: #ffffff;
-    --color4: #5f0f40;
-    --color5: #9a031e;
-    --color6: #c3530e;
-    --color7: #ae551d;
-    --color8: #a3a2a2;
-    --color9: #000;
+:root{
+    --celeste-1: #234459;
+    --celeste-2: #3C7499;
+    --celeste-3: #5AAEE6;
+    --celeste-4: #94C1FF;
+
+    --azul-1: #012E40;
+    --azul-3: #026773;
+
+    --negro: #000;
+    --gris-obscuro: #8c8c8c;
+    --gris: #d9d9d9;
+    --blanco2: #F8F8F8;
+    --blanco: #fff;
 }
-.barra{
-    position:fixed;
-    width: 100%;
-    top: 90px;
-}
-.cont{
-    padding-top: 90px;
-}
-#bold{
-    font-weight: bold;
-}
-.cont{
-    clear: left;
-    width: 80%;
-    height: auto;
-    margin: 0px auto;
+button{
+    border: none;
 }
 .galeria{
-    display: inline-block;
-    margin: 0 auto;
-    overflow: hidden;
-    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 20px 0;
+    gap: 20px;
 }
 .opciones{
     height: 355px;
     margin: 5px 15px;
-    border: solid var(--color8) 2px;
-    border-radius: 0px;
+    border: solid var(--gris) 2px;
+    background-color: var(--blanco);
+    border-radius: 8px;
     float: left;
     text-align: justify;
     width: 28%;
-    padding: 1%
+    padding: 1%;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 .opciones img{
     max-width: 70%;
     height: 160px;
     margin: 3px auto;
     display: block;
+    border-radius: 10px;
 }
 .info-cupon{
     padding-top: 10px;
@@ -55,16 +49,19 @@
     width: 100%;
     height: 90px;
     justify-items: center;
+    justify-content: space-between;
 }
 .info-cupon img{
-    max-width: 40%;
+    max-width: 45%;
     justify-content: left;
     float: left;
-    height: 80px;
+    height: auto;
     padding-right: 10px;
+    border-radius: 5px;
 }
 .info-cupon p{
     font-size: 0.9em;
+    color: var(--gris-obscuro);
     display: flex;
     align-items: center;
     justify-items: center;
@@ -75,15 +72,18 @@ h3, h4, h5{
 }
 h3{
     padding-top: 5px;
-    color: var(--color2);
+    color: var(--azul-3);
     padding-bottom: 5px;
     font-size: 1.6em;
+    font-weight: bold;
 }
 h4{
     padding-bottom: 5px;
-    color: var(--color1);
+    color: var(--celeste-2);
     font-size: 1.2em;
+    font-weight: bolder;
 }
 h5{
     padding-top: 5px;
+    color: var(--gris-obscuro);
 }
