--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,115 +1,117 @@
-@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
-:root{
-    --color1: #e36414;
-    --color2: #0f4c5c;
-    --color3: #ffffff;
-    --color4: #5f0f40;
-    --color5: #9a031e;
-    --color6: #c3530e;
-    --color7: #ae551d;
-    --color8: #a3a2a2;
-    --color9: #000;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@400;700&display=swap');
+
+:root {
+    --celeste-1: #234459;
+    --celeste-2: #3C7499;
+    --celeste-3: #5AAEE6;
+    --celeste-4: #94C1FF;
+    --azul-1: #012E40;
+    --azul-3: #026773;
+    --negro: #000;
+    --gris-obscuro: #8c8c8c;
+    --gris: #d9d9d9;
+    --blanco: #fff;
 }
-*{
-    padding: 0;
+body {
     margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
 }
-body{
-    background: var(--color3);
-}
-.formulario{
-    width: 500px;
-    height: auto;
-    margin: 0 auto;
-    margin-top: 150px;
-    background-color: var(--color1);
+.formulario {
+    width: 100%;
+    max-width: 500px;
+    padding: 20px;
+    background-color: var(--gris);
     border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    flex-grow: 1;
 }
-.head{
-    background-color: var(--color6);
-    height: 45px;
-    border-radius: 10px 10px 0px 0px;
-}
-.head h2{
+.head {
+    padding: 15px;
+    border-radius: 10px 10px 0 0;
     text-align: center;
-    line-height: 45px;
-    height: 45px;
-    color: var(--color3);
 }
-.logIn{
-    padding: 0 25px;
+.head h2 {
+    color: var(--azul-3);
+    font-size: 1.5em;
+    margin: 0;
+    font-family: Montserrat Subrayada;
+}
+.logIn {
+    padding: 20px 25px;
 }
 .logIn li {
     display: flex;
     align-items: center;
+    margin-bottom: 15px;
 }
 .logIn span.inicio {
-    border-radius: 3px 0px 0px 3px;
-    width: 10%;
+    width: 15%;
     text-align: center;
-    color: var(--color2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: var(--color7);
+    background-color: var(--celeste-3);
+    color: var(--blanco);
     height: 40px;
-    line-height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px 0 0 5px;
 }
 .text {
-    background: var(--color7);
-    width: 90%;
-    border-radius: 0px 3px 3px 0px;
-    border: none;
-    outline: none;
-    color: var(--color8);
-    font-family: 'Source Sans Pro', sans-serif;
-    padding-left: 10px;
+    width: 85%;
+    padding: 0 10px;
+    background-color: var(--blanco);
+    border: 1px solid var(--celeste-3);
+    color: var(--azul-1);
     height: 40px;
-    line-height: 40px;
-}
-
-.boton {
-    height: 35px;
-    background: var(--color2);
-    width: 100%;
+    border-radius: 0 5px 5px 0;
     outline: none;
-    border-radius: 4px;
-    cursor: pointer;
-    color: var(--color3);
     font-size: 1em;
-    border: none;
-    margin-bottom: 10px;
 }
-
-.span {
-    display: table;
+.boton {
     width: 100%;
-    font-size: 14px;
+    padding: 10px;
+    background-color: var(--celeste-2);
+    color: var(--blanco);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: bold;
+    transition: background-color 0.3s;
 }
-
-ul li {
-    margin: 15px 0;
-    list-style: none;
+.boton:hover {
+    background-color: var(--celeste-1);
 }
 .cuenta_nueva {
-    width: 88%;
-    padding: 0 6%;
-    height: 40px;
-    background: var(--color6);
-    border-radius: 0px 0px 10px 10px;
-}
-
-.cuenta_nueva div{
-    display: block;
-    width: 100%;
-    color: var(--color3);
-    line-height: 40px;
     text-align: center;
+    padding: 15px;
+    background-color: var(--celeste-4);
+    border-radius: 10px;
+}
+.cuenta_nueva a {
+    color: var(--azul-1);
     text-decoration: underline;
+    font-size: 1em;
 }
-.cuenta_nueva a:hover{
-    color: var(--color8);
+.cuenta_nueva a:hover {
+    color: var(--celeste-2);
 }
-.cuenta_nueva div:hover{
-    color: var(--color8);
+ul li {
+    list-style: none;
+}
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    background-color: var(--azul-1);
+}
+footer h3{
+    color: var(--blanco);
+    font-size: 0.9em;
 }
