--- a/index.css
+++ b/index.css
@@ -96,9 +96,9 @@ body{
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: var(--color3);
+    background-color: var(--gris);
     position: sticky;
-    border-radius: 15px;
+    border-radius: 10px;
     height: 50px;
 }
 .barra h2{
