--- a/css/categorias.css
+++ b/css/categorias.css
@@ -3,6 +3,7 @@
     --celeste-2: #3C7499;
     --celeste-3: #5AAEE6;
     --celeste-4: #94C1FF;
+    --azul: #1d3557;
 
     --azul-1: #012E40;
     --azul-3: #026773;
@@ -10,9 +11,14 @@
     --negro: #000;
     --gris-obscuro: #8c8c8c;
     --gris: #d9d9d9;
+    --gris-nuevo: #f5f5f5;
     --blanco2: #F8F8F8;
     --blanco: #fff;
+    --color1: #333;
+    --colo2: #555;
     --rojo: #e63946;
+    --color3: #ddd;
+
 }
 button{
     border: none;
@@ -56,7 +62,6 @@ button{
 }
 .info-cupon p{
     font-size: 0.9em;
-    color: var(--gris-obscuro);
     display: flex;
     align-items: center;
     justify-items: center;
@@ -74,7 +79,7 @@ h3{
 }
 h4{
     padding-bottom: 5px;
-    color: var(--negro);
+    color: var(--color1);
     font-size: 1.2em;
     font-weight: bolder;
     text-decoration: line-through;
@@ -82,5 +87,5 @@ h4{
 }
 h5{
     padding-top: 5px;
-    color: var(--gris-obscuro);
+    color: var(--colo2);
 }
