--- a/pages-products/style.css
+++ b/pages-products/style.css
@@ -120,3 +120,22 @@ h5{
     align-items: center;
     justify-content: center;
 }
+.comprar {
+    margin-top: 10px;
+    background-color: #e63946;
+    color: #fff; 
+    border: none;
+    border-radius: 10px;
+    padding: 10px 12px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+    
+.comprar:hover {
+    background-color: #d62839; 
+    transform: scale(1.05); 
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+}
