--- a/css/logIn.css
+++ b/css/logIn.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 :root{
     --celeste-1: #234459;
@@ -24,7 +25,8 @@
 }
 body{
     font-family: Mulish;
-    background-color: var(--gris-nuevo)
+    background-color: var(--gris-nuevo);
+    width: 100%;
 }
 .form-container{
     display: flex;
