--- a/pages-products/style.css
+++ b/pages-products/style.css
@@ -137,7 +137,10 @@ h5{
     transition: background-color 0.3s ease, transform 0.2s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-    
+.comprar a{
+    color: var(--blanco);
+    text-decoration: none;
+}    
 .comprar:hover {
     background-color: var(--rojo2); 
 
