--- a/css/formulario.css
+++ b/css/formulario.css
@@ -35,7 +35,7 @@ body {
     max-width: 500px;
     padding: 20px;
     background-color: var(--gris);
-    border-radius: 10px;
+    border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     flex-grow: 1;
 }
@@ -161,4 +161,26 @@ footer h3{
 }
 .pagarBTN:hover {
     background-color: var(--azul-1);
+}
+#ultimo {
+    display: flex;
+    border-radius: 10px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    width: 100%;
+    border: 1px solid #ddd;
+    background-color: var(--celeste-3);
+}
+
+#ultimo h1 {
+    font-size: 1.1em;
+    margin: 0;
+}
+
+#precioPago {
+    font-size: 1em;
+    color: var(--blanco);
+    margin: 0;
+    font-weight: bolder;
 }
