--- a/admin/style_admin.css
+++ b/admin/style_admin.css
@@ -150,3 +150,16 @@ img {
 .button:hover {
     opacity: 0.9;
 }
+
+.modal-container {
+    display: none; /* Oculta el modal por defecto */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
